# learn-haskell-coq-ml-etc

./: .gitignore  README.md  README.org  hie.yaml
agda/: 00-agda.org  (+2 more)
conference/2018-05-lambdaconf/telegram-bot-in-haskell/: 0-README.org  README.md  demo-bot.cabal  stack.yaml
conference/2018-05-lambdaconf/telegram-bot-in-haskell/app/: Main3.hs  Main4.hs  Main6.hs  Main7.hs  Main8.hs
haskell/book/Algebra_of_Programming/aop/: aop.cabal  stack.yaml
haskell/book/Beginning_Haskell/BeginningHaskellEclipseProject/: BeginningHaskellEclipseProject.cabal
haskell/book/Handbook_of_Practical_Logic_and_Automated_Reasoning/: README.org  hplar.cabal  stack.yaml
haskell/book/Handbook_of_Practical_Logic_and_Automated_Reasoning/src/: Lib.hs  Parser.hs  Test.hs  X_1_6_to_1_8_Expr.hs  X_2_1_Prop_Syntax.hs  X_2_2_Prop_Semantics.hs  X_2_3_Prop_Validity_Satisfiability_Tautology.hs  X_2_4_DeMorgan_Adequacy_Duality.hs  X_2_5_Simplification_and_NNF.hs
haskell/book/Haskell_Design_Patterns/: .gitignore  Haskell-Design-Patterns.cabal  package.yaml  stack.yaml
haskell/book/Haskell_Design_Patterns/src/: Ch00_Tests.hs  Ch05_01_rank_n_types.lhs  Ch05_02_rank_n_types.lhs  Ch05_03_universal_quantification.lhs  Ch05_04_existential_quantification.lhs  Ch05_05_phantom_types.lhs  Ch05_06_gadt.lhs  Ch05_07_typecase.lhs  Ch05_08_dynamic_types_01.lhs  Ch05_08_dynamic_types_02.lhs  Ch05_09_hlists_via_existentials.lhs  Ch05_10_hlists_via_gadts.lhs  Ch05_11_multiparam_type_classes.lhs  Ch05_12_functional_dependencies.lhs  Ch06_01_generics_sum_of_products.lhs  Ch07_01_higher_order_kinds.lhs  Ch07_02_higher_kinded_polymorphism.lhs  Ch07_03_associated_type_synonyms.lhs  Ch07_05_kind_polymorphism.lhs  Ch07_07_type_level_programming.lhs  Ch07_08_dependently_typed_programming.lhs
haskell/book/Haskell_Design_Patterns/test/: HDPSpec.hs
haskell/book/Real_World_Haskell/: .gitignore  FixLines.hs  InteractWith.hs  PNM.hs  PrettyJSON.cabal  PrettyJSON.hs  PrettyJSONPrettify.hs  Real_World_Haskell.hs  Real_World_Haskell.org  SimpleJSON.hs  ch04_dlts.hs  myDrop.hs  posixtime.hs
haskell/conference/2015-icfp/tut/: 00-Notes.org  Main.hs  XGenericsAndTypeLevel.hs  XGenericsUse.hs  XTurtle.hs  stack.yaml  tut.cabal
haskell/conference/2017-09-cufp-effects/: README.md  oxford.cabal
haskell/conference/2017-09-cufp-effects/src/: OpenUnion52.hs  Tutorial2.hs  Tutorial2_Orig.hs
haskell/course/2014-07-utrecht/: .gitignore  U.cabal  cabal.sandbox.config
haskell/course/2014-07-utrecht/MasterMind/: MasterMind.hs
haskell/course/2014-07-utrecht/src/: Assignment1.hs  Assignment3.hs  Assignment4.hs  Main.hs  MasterMind.hs  Stereograms.hs  Validation.hs
haskell/course/snoyman/2017-applied-haskell-at-lambdaconf/: E5RepeatLineIntoFile.hs  EPollStm.hs  S4FFICWrite.hs  S_GetUrlsContents.txt  applied-haskell.cabal
haskell/paper/debasishg/: X_2013_01_a_language_and_its_interpretation.hs  debasishg.cabal
haskell/paper/fpcomplete/dependent-types-in-haskell-hiromi-ishii/: README.org  dependent-types-in-haskell-hiromi-ishii.cabal
haskell/paper/haskellforall/: .gitignore  X_2011_12_31_functors.hs  X_2012_01_04_state.hs  X_2012_01_28_lenses.hs  X_2012_01_29_unicode.hs  X_2012_01_ADTs.hs  X_2012_06_09_why_free_monads_matter.hs  X_2012_07_18_purifying_code_using_free_monads.hs  X_2013_05_program_imperatively_using_haskell.hs  haskellforall.cabal  pipes-tutorial.hs  stack.yaml
haskell/paper/haskellforall/src/: PipesTutorial.hs  X_2011_12_31_functors.hs  X_2012_01_01_loops.hs  X_2012_01_03_ADTs.hs  X_2012_01_29_unicode.hs  X_2012_06_09_why_free_monads_matter.hs  X_2013_05_program_imperatively_using_haskell.hs
haskell/paper/johndegoes/advanced-fp/: AFP.lhs  advanced-fp.cabal  stack.yaml
haskell/paper/phaazon/frp/: README.org  frp.cabal
haskell/paper/practical_recursion_schemes/: .gitignore  PRS.cabal  PRS.hs  PRS.org  stack.yaml
haskell/playpen/2017-03-darryl-mcadams-proof-refinement/: P1_A.lhs  P1_B.lhs  P2.lhs  P3.lhs  darryl-mcadams-proof-refinement.cabal  stack.yaml
haskell/playpen/AESS/: AESS.hs  aess.cabal
haskell/playpen/aeson-playground/: aeson-playground.cabal  stack.yaml
haskell/playpen/aeson-playground/src/: AesonAST.hs  AesonTut.hs  Search.hs  SparqlResults.hs
haskell/playpen/aeson-playground/test/: refs-indirect-circular-ancestor-invalid.json  refs-simple-invalid.json  x.json
haskell/playpen/chris-penner-avoid-io-monad-io/: AMIO.lhs  SAVE  chris-penner-avoid-io-monad-io.cabal
haskell/playpen/darais/: darais.cabal  stack.yaml
haskell/playpen/darais/src/: Darais.hs
haskell/playpen/free-playground/: 2013-09-andres-loeh-monads-for-free.hs  REFS.org  free-playground.cabal  stack.yaml
haskell/playpen/free-playground/src/: FA.hs  FA_EK_ValidationForm.hs  FM.hs  FM_2013_09_andres_loeh_monads_for_free.hs  FM_EK_Teletype.hs  FM_GG_2012_07_purify_code.hs  FM_JD_modern_fp.hs  FM_MX_Redis.hs  HA_Operational_Monad_Tutorial.hs  Test.hs  ValidationForm.hs  X_2013_01_a_language_and_its_interpretation.hs
haskell/playpen/hcpn/: Makefile  README  hcpn.cabal  stack.yaml
haskell/playpen/hcpn/app/: Main.hs
haskell/playpen/hcpn/examples/: allen_brady_beaver.hcpn  allen_brady_beaver.hs  critical_region.hcpn  critical_region.hs  critical_stage1.hcpn  critical_stage2.hcpn  fa_regular.hcpn  fa_regular.hs  fa_stack.hcpn  fa_stack.hs  locker.hcpn  locker.hs  myghci  phil_stage1.hcpn  phil_stage2.hcpn  phil_stage3.hcpn  phil_stage4.hcpn  phil_stage5.hcpn  philosophers-folded.hcpn  philosophers-folded.hs  philosophers.hcpn  philosophers.hs  pi.hcpn  pi.hs
haskell/playpen/misc/: misc.cabal  package.yaml  stack.yaml
haskell/playpen/pipes-playground/: pipes-playground.cabal
haskell/playpen/zillow/: README.org  stack.yaml  zillow.cabal
haskell/topic/cli/: Main.hs  cli.cabal
haskell/topic/exceptions/: exceptions-playground.cabal  stack.yaml
haskell/topic/ghc-extensions/: .dir-locals.el  .ghc.environment.x86_64-linux-8.4.3  default.nix  ghc-extensions.cabal  shell.nix
idris/book/Type_Driven_Development_with_Idris/: .gitignore  Makefile  README.org  p019-hello-world.idr  p28.idr  p76.idr  p88.idr  tddwi.cabal
(+2281 files in other folders)
