name:           demo-bot
version:        0.1.0
synopsis:       Telegram demo bot for LambdaConf 2018 workshop.
description:    Please see the README on Github at <https://github.com/fizruk/lambdaconf-2018-workshop#readme>
category:       Web
homepage:       https://github.com/fizruk/lambdaconf-2018-workshop#readme
bug-reports:    https://github.com/fizruk/lambdaconf-2018-workshop/issues
author:         Nickolay Kudasov
maintainer:     nickolay.kudasov@gmail.com
copyright:      Nickolay Kudasov
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    PREPARE.md
    README.md

source-repository head
  type: git
  location: https://github.com/fizruk/lambdaconf-2018-workshop

executable main1
  main-is: Main1.hs
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base
    , http-api-data
    , http-client
    , http-client-tls
    , mtl
    , servant-client
    , telegram-bot-simple
    , text
    , time
  default-language: Haskell2010

executable main2
  main-is: Main2.hs
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base
    , http-api-data
    , http-client
    , http-client-tls
    , mtl
    , servant-client
    , telegram-bot-simple
    , text
    , time
  default-language: Haskell2010

executable main3
  main-is: Main3.hs
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base
    , http-api-data
    , http-client
    , http-client-tls
    , mtl
    , servant-client
    , telegram-bot-simple
    , text
    , time
  default-language: Haskell2010

executable main4
  main-is: Main4.hs
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base
    , http-api-data
    , http-client
    , http-client-tls
    , mtl
    , servant-client
    , telegram-bot-simple
    , text
    , time
  default-language: Haskell2010

executable main5
  main-is: Main5.hs
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base
    , http-api-data
    , http-client
    , http-client-tls
    , mtl
    , servant-client
    , telegram-bot-simple
    , text
    , time
  default-language: Haskell2010

executable main6
  main-is: Main6.hs
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base
    , http-api-data
    , http-client
    , http-client-tls
    , mtl
    , servant-client
    , telegram-bot-simple
    , text
    , time
  default-language: Haskell2010

executable main7
  main-is: Main7.hs
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base
    , http-api-data
    , http-client
    , http-client-tls
    , mtl
    , servant-client
    , telegram-bot-simple
    , text
    , time
  default-language: Haskell2010

executable main8
  main-is: Main8.hs
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base
    , http-api-data
    , http-client
    , http-client-tls
    , mtl
    , servant-client
    , telegram-bot-simple
    , text
    , time
  default-language: Haskell2010
