name:                hplar
version:             0.1.0.0
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Parser
  build-depends:       base >= 4.7 && < 5
                     , ansi-wl-pprint
                     , Earley
                     , HUnit
                     , parsec
                     , test-hunit-util
                     , text
  default-language:    Haskell2010
