name:                Haskell-Design-Patterns
version:             0.1.0.0
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ch05_01_rank_n_types
                     , Ch05_02_rank_n_types
                     , Ch05_03_universal_quantification
                     , Ch05_04_existential_quantification
                     , Ch05_05_phantom_types
                     , Ch05_06_gadt
                     , Ch05_07_typecase
                     , Ch05_08_dynamic_types_01
                     , Ch05_08_dynamic_types_02
                     , Ch05_09_hlists_via_existentials
                     , Ch05_10_hlists_via_gadts
                     , Ch05_11_multiparam_type_classes
                     , Ch05_12_functional_dependencies
                     , Ch07_01_higher_order_kinds
                     , Ch07_02_higher_kinded_polymorphism
                     , Ch07_03_associated_type_synonyms
                     , Ch07_04_type_synonym_families
                     , Ch07_05_kind_polymorphism
                     , Ch07_06_type_promotion
                     , Ch07_07_type_level_programming
                     , Ch07_08_dependently_typed_programming
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
