name:                oxford
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/oxford#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FTCQueue1
                     , Lib
                     , OpenUnion52
                     , Tutorial1_Orig
                     , Tutorial2_Orig
                     , Tutorial3_Orig
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

