name:                U
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            http://haroldcarr.com/
-- license:             
license-file:        LICENSE
author:              Harold Carr
maintainer:          harold.carr@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     MasterMind.MasterMind
                       , RaceTrack.SVG
                       , Stereograms.SIRDS
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7
                       , blaze-svg >= 0.3.4
                       , containers >= 0.5.0.0
                       , random >= 1.0.1.1
                       , HUnit >=1.2 && <1.3
                       , test-hunit-util >=0.1 && <0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
