name:                debasishg
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/debasishg#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     X_2013_01_a_language_and_its_interpretation
  build-depends:       base >= 4.7 && < 5
                     , free >= 4.11
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/debasishg
