name:                haskellforall
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            http://www.haskellforall.com/
-- license:             
-- license-file:        LICENSE
author:              Gabriel Gonzales
maintainer:          harold.carr@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.18

library
  exposed-modules:     X_2012_01_01_loops
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7
                       , mtl >= 2.1.3.1
                       , data-lens >= 2.10.5
  -- hs-source-dirs:      
  default-language:    Haskell2010