name:                PRS
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/prs#readme
-- license:             BSD3
-- license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     PRS
  build-depends:       base >= 4.7 && < 5
                     , data-ordlist == 0.4.7.0
                     , recursion-schemes >= 4.1.2
  default-language:    Haskell2010
