name:                  darryl-mcadams-proof-refinement
version:               0.1.0.0
build-type:            Simple
cabal-version:         >=1.10

library
  exposed-modules:     P1_A
                     , P1_B
                     , P2
                     , P3
  build-depends:       base >= 4.7 && < 5
                     , HUnit
                     , test-hunit-util
  default-language:    Haskell2010
  ghc-options:         -Wall
