name:                aess
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     AESS
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , cereal
                     , cereal-text
                     , cryptonite
                     , containers
                     , memory
                     , text
  default-language:    Haskell2010
