name:                free-playground
version:             0.1.0.0
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FM
                     , ValidationForm
  build-depends:       base >= 4.7 && < 5
                     , free
                     , HUnit
                     , monad-loops
                     , mtl
                     , pipes
                     , test-hunit-util
  default-language:    Haskell2010
