name:                free-playground
version:             0.1.0.0
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FM_DebasishG_2013_01_a_language_and_its_interpretation
                     , FM_DL_free_cofree
                     , FM_EK_Teletype
                     , FM_GG_2012_07_purify_code
                     , FM_JD_modern_fp
                     , ValidationForm
  build-depends:       base >= 4.7 && < 5
                     , free
                     , HUnit
                     , monad-loops
                     , mtl
                     , pipes
                     , test-hunit-util
  default-language:    Haskell2010
