name:                free-playground
version:             0.1.0.0
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FA_EK_ValidationForm
                     , FM_2013_09_andres_loeh_monads_for_free
                     , FM_DL_free_cofree
                     , FM_DebasishG_2013_01_a_language_and_its_interpretation
                     , FM_EK_Teletype
                     , FM_GG_2012_07_purify_code
                     , FM_JD_modern_fp
                     , FM_MX_Redis
                     , HA_Operational_Monad_Tutorial
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , either-unwrap
                     , free
                     , HUnit
                     , monad-loops
                     , mtl
                     , pipes
                     , test-hunit-util
  default-language:    Haskell2010
