name:                hcpn
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DefaultLocation
                     , GuiHCPN
                     , NetAux
                     , NetData
                     , NetEdit
                     , NetImportExport
                     , NetPaint
                     , SimpleHCPN
                     , WindowContext
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , random
                     , wx
                     , wxcore
  default-language:    Haskell2010

executable hcpn
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hcpn
                     , wx
  default-language:    Haskell2010
