name:                misc
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ValidResponses
                     , ReaderFun
                     , RebindableSyntax
                     , Seq
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , protolude
                     , text
  default-language:    Haskell2010
