name:                pipes-playground
version:             0.1.0.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , pipes
                     , pipes-bytestring
                     , pipes-http
                     , pipes-network
                     , transformers
  default-language:    Haskell2010

executable pp
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pipes-playground
  default-language:    Haskell2010

