name:                zillow
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , HsOpenSSL
                     , http-client-openssl
                     , lens
                     , lens-aeson
                     , tagsoup
                     , text
                     , thyme
                     , wreq
  default-language:    Haskell2010
