name:                zillow
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , HsOpenSSL
                     , http-client-openssl
                     , lens
                     , tagsoup
                     , text
                     , thyme
                     , wreq
  default-language:    Haskell2010

test-suite zillow-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring
                     , hspec
                     , hspec-expectations
                     , text
                     , zillow
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
