name:                exceptions-playground
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Assert
                     , Lib
                     , TestUtil
  ghc-options:         -Wall -fno-ignore-asserts
  build-depends:       base >= 4.7 && < 5
                     , assert
                     , gitrev
                     , regex-posix
                     , text
  default-language:    Haskell2010

test-suite exceptions-playground-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , assert
                     , exceptions-playground
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
