name:                  ghc-extensions
version:               0.1.0.0
build-type:            Simple
cabal-version:         >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     K
                     , PatternSynonyms.PatternSynonyms_OCharles
                     , PatternSynonyms.PF1
                     , PatternSynonyms.PF2
                     , PatternSynonyms.PF3
                     , PatternSynonyms.PF4
                     , RankNTypes.OC
                     , RankNTypes.RNT
                     , ViewPatterns.ViewPatterns_OCharles
  build-depends:       base >=4.7 && <5
                     , containers
                     , ghc-prim
                     , mtl
                     , random
  ghc-options:         -Wall
  default-language:    Haskell2010
