name:                aop
version:             0.1.0.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Aop
  build-depends:       base >= 4.7 && < 5
                     , HUnit
                     , test-hunit-util
  default-language:    Haskell2010
