name:           BeginningHaskellEclipseProject
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Harold Carr

library
  hs-source-dirs:  src
  build-depends:   base >= 4
  ghc-options:     -Wall
  other-modules:
                   Chapter2.Section2.Example,
                   Chapter2.SimpleFunctions,
                   Chapter2.DefaultValues,
                   Chapter3.ParamPoly

