name:                tut
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/tut#readme
-- license:             BSD3
-- license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     XGenericsAndTypeLevel
                     , XTurtle
  build-depends:       base >= 4.7 && < 5
                     , generics-sop
                     , turtle >= 1.2.1
  default-language:    Haskell2010

executable turtle
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , turtle >= 1.2.1
                     , tut
  default-language:    Haskell2010
