name:                dependent-types-in-haskell-hiromi-ishii
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     S01
                     , S04
                     , S07
                     , S09
  build-depends:       base >= 4.7 && < 5
                     , singletons
  default-language:    Haskell2010
