name:                advanced-fp
version:             0.1.0.0
license:             BSD3
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     X01
  build-depends:       base >= 4.7 && < 5
                     , HUnit
                     , test-hunit-util
  default-language:    Haskell2010

