name:                frp
version:             0.1.0.0
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , linear
                     , semigroups
  default-language:    Haskell2010

executable frp
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , frp
  default-language:    Haskell2010

test-suite frp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , frp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
